Neo4j up and running

--- a/Redis/hmtl_documents/start.html
+++ b/Redis/hmtl_documents/start.html
@@ -6,6 +6,19 @@
 </head>
 
 <body>
+    <h2>Input the id of the car you want</h2>
+    <h4>The car id's is 1 to 200.000</h4>
+    <br>
+    <form method="POST" action="/data.html" id=pform>
+        <div>
+            Enter n <input type="text" name="n"> <br>
+            <input type="submit" name="submit" value="Submit">
+        </div>
+    </form>
+
+    <br>
+    <br>
+
     <h2>Input the range of data you want to see</h2>
     <h4>For instance: 1 and 3 it will print data with id 1, 2 and 3.</h4>
     <br>
